--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Rajdhani:400,500,600');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500');
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,500;1,500&family=Jost:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+
 /* You can add global styles to this file, and also import other style files */
 html, body {
   width: 100%;
-  min-width: 780px;
+  min-width: 480px;
   height: 100%;
   margin: 0;
+  background-color: #63717e;
 }
 
 p::first-letter {
@@ -21,5 +23,3 @@ a {
 .fill-remaining-space {
   flex: 1 1 auto;
 }
-
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
